# ridge-core

./: .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/omnyx/: Cargo.toml  README.md
crates/omnyx/src/: lib.rs  main.rs
crates/omnyx/src/builder/: core.rs
crates/omnyx/src/builder/code/: core.rs
crates/omnyx/src/builder/code/types/: api.rs  group.rs  layout.rs  page.rs  special.rs
crates/omnyx/src/core/: core.rs
crates/omnyx/src/core/pingora/handle_route/: core.rs  finalize_response.rs  middleware.rs  public.rs
crates/omnyx/src/core/pingora/handle_route/renderer/: finalize_response.rs  render_page.rs
crates/omnyx/src/core/pingora/handle_route/renderer/core/: framework_fallbacks.rs
crates/omnyx/src/core/router/: mod.rs
crates/omnyx/src/core/router/handlers/: api.rs  context.rs  core.rs  error.rs  layout.rs  loader.rs  macros.rs  mod.rs  not_found.rs  page.rs  special.rs
crates/omnyx/src/core/router/io/: context.rs  mod.rs
crates/omnyx/src/core/router/io/request/: connection.rs  core.rs  mod.rs  request_context.rs
crates/omnyx/src/core/router/io/request/kinds/: api.rs  mod.rs  page.rs
crates/omnyx/src/core/router/io/request/types/: api.rs  page.rs  shared_api.rs
crates/omnyx/src/core/router/io/response/: core.rs  init.rs  into_response.rs  mod.rs  mutator.rs  response_context.rs  response_jar.rs
crates/omnyx/src/core/router/logic/: loader.rs  middleware.rs  mod.rs
crates/omnyx/src/core/router/logic/metadata/: core.rs  flat.rs  mod.rs  render.rs
crates/omnyx/src/core/router/logic/metadata/types/: alternates.rs  app_links.rs  apple_web_app.rs  author.rs  custom_tag.rs  icons.rs  open_graph.rs  policies.rs  robots.rs  twitter_card.rs  verification.rs
crates/omnyx/src/core/router/matcher/: build.rs
crates/omnyx/src/core/router/registry/: mod.rs  route_node.rs
crates/omnyx/src/core/router/tree/: core.rs  matcher.rs  mod.rs  path.rs
crates/omnyx/src/island/: core.rs
crates/omnyx/src/plugin/: core.rs  mod.rs
crates/omnyx/src/realtime/: core.rs
crates/omnyx/src/render/: mod.rs  pipeline.rs
libs/: mod.rs
libs/own-router/: Cargo.toml
libs/own-router/src/: lib.rs
libs/own-router/src/metadata/: mod.rs
libs/own-router/src/render/: mod.rs  strategy.rs
libs/own-router/src/router/: context.rs  layout.rs  method.rs  middleware.rs  mod.rs  own_context.rs  router.rs
libs/own-router/src/router/metadata/: alternates.rs  app_links.rs  author.rs  custom_tag.rs  flat.rs  icons.rs  macros.rs  metadata.rs  mod.rs  policies.rs  robots.rs  verification.rs
libs/ridge-core/: Cargo.toml
libs/ridge-core/src/: lib.rs
libs/ridge-core/src/builder/: core.rs  mod.rs  route_tree_builder.rs
libs/ridge-core/src/client/: core.rs  mod.rs
libs/ridge-core/src/core/: core.rs  mod.rs
libs/ridge-core/src/diagnostics/: core.rs  mod.rs
libs/ridge-core/src/edge/: core.rs  mod.rs
libs/ridge-core/src/error/: core.rs  mod.rs  route_error.rs
libs/ridge-core/src/island/: core.rs  mod.rs
libs/ridge-core/src/loader/: core.rs  mod.rs
libs/ridge-core/src/middleware/: core.rs
libs/ridge-core/src/plugin/: core.rs  mod.rs
src/: main.rs
(+34 files in other folders)
