[package]
name = "own-router"
version = "0.1.0"
edition = "2024"


[dependencies]
# The core web engine
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

# For UI & State
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3"
pin-project-lite = "0.2"
rscx = "0.1.14"
const_format = "0.2.35"
tracing = "0.1.44"